--- a/scss/layout/_media-768.scss
+++ b/scss/layout/_media-768.scss
@@ -1,17 +1,34 @@
 @media (max-width:768px){
-    .grid{
-        display: flex;
-        justify-content: space-evenly;
+    nav .menu{
+        width: 100%;
+        height: 0;
+        overflow: hidden;
     }
-    .nav{
-    display: flex;
-    flex-wrap: wrap;
-        ul{
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
+    nav ul{
+        flex-direction: column;
+        align-items: center;
+        padding: 0.5rem 0;
     }
+    nav label{
+        display: inline-flex;
+        color: #F2F1F0;
+    }
+    nav #toggle:checked ~.menu{
+        height: 100%;
+    }
+    // .grid{
+    //     display: flex;
+    //     justify-content: space-evenly;
+    // }
+    // .nav{
+    // display: flex;
+    // flex-wrap: wrap;
+    //     ul{
+    //         display: flex;
+    //         flex-wrap: wrap;
+    //         gap: 10px;
+    //     }
+    // }
     h1{
         font-size: 30px;
     }
@@ -21,56 +38,56 @@
     p{
         font-size: 14px;
     }
-    .grid-main{
-        background-image: url("../assets/imagenes/white-wall.jpg");
-        background-size: 100% 100%;
-        display: grid;
-        grid-template-columns: repeat(5,1fr);
-        grid-template-rows: repeat(5,auto);
-        grid-template-areas: 
-        "rainbow rainbow rainbow rainbow rainbow"
-        ". sec1 sec1 sec1 ."
-        "sec2 sec2 sec2 sec2 sec2"
-        ". sec3 sec4 sec5 ."
-        ". sec3 sec4 sec5 .";
-    }
-    .grid-main-p{
-        @include grid(1, 4);
-        grid-template-areas:
-        "rainbow"
-        "1"
-        "2"
-        "3 3 3";
-    }
-    .rainbow{
-        height: 20px;
-    }
-    .tapas{
-        flex-direction: column;
-    }
-    .cover{
-        width: 115px;
-        height: 190px;
-    }
-    section iframe{
-        width: 115px;
-        height: 190px;
-    }
-    .card{
-        height: 30px;
-        padding: 10px;
-    }
-    .icon{
-        width: 30px;
-        height: 30px;
-    }
-    .grid-footer{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-    .fot-2 ul{
-        display: flex;
-        gap: 5px;
-    }
+    // .grid-main{
+    //     // background-image: url("../assets/imagenes/white-wall.jpg");
+    //     // background-size: 100% 100%;
+    //     display: grid;
+    //     grid-template-columns: repeat(5,1fr);
+    //     grid-template-rows: repeat(5,auto);
+    //     grid-template-areas: 
+    //     "rainbow rainbow rainbow rainbow rainbow"
+    //     ". sec1 sec1 sec1 ."
+    //     "sec2 sec2 sec2 sec2 sec2"
+    //     ". sec3 sec4 sec5 ."
+    //     ". sec3 sec4 sec5 .";
+    // }
+    // .grid-main-p{
+    //     @include grid(1, 4);
+    //     grid-template-areas:
+    //     "rainbow"
+    //     "1"
+    //     "2"
+    //     "3 3 3";
+    // }
+    // .rainbow{
+    //     height: 20px;
+    // }
+    // .tapas{
+    //     flex-direction: column;
+    // }
+    // .cover{
+    //     width: 115px;
+    //     height: 190px;
+    // }
+    // section iframe{
+    //     width: 115px;
+    //     height: 190px;
+    // }
+    // .card{
+    //     height: 30px;
+    //     padding: 10px;
+    // }
+    // .icon{
+    //     width: 30px;
+    //     height: 30px;
+    // }
+    // .grid-footer{
+    //     display: flex;
+    //     flex-direction: row;
+    //     justify-content: space-around;
+    // }
+    // .fot-2 ul{
+    //     display: flex;
+    //     gap: 5px;
+    // }
 }
