--- a/scss/layout/_media-991.scss
+++ b/scss/layout/_media-991.scss
@@ -1,17 +1,17 @@
-@media (max-width:991px){
-    .nav-item{
-        display: flex;
-        justify-content: center;
-    }
-    .card::-webkit-scrollbar:horizontal {
-        width: 5px;
-    }
-    .cover{
-        width: 125px;
-        height: 200px;
-    }
-    section iframe{
-        width: 125px;
-        height: 200px;
-    }
-}
+// @media (max-width:991px){
+//     .nav-item{
+//         display: flex;
+//         justify-content: center;
+//     }
+//     .card::-webkit-scrollbar:horizontal {
+//         width: 5px;
+//     }
+//     .cover{
+//         width: 125px;
+//         height: 200px;
+//     }
+//     section iframe{
+//         width: 125px;
+//         height: 200px;
+//     }
+// }
