--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,62 +1,45 @@
 body{
-    // scrollbar-width: thin;
-    // scrollbar-color: #B2B2B2;
-    // height: 100%;
     header{
-        background-color: #20262E;
+        background-color: #383838;
         width: 100%;
         height: 100%;
         padding: 2px;
-        .grid{
-            @include grid(repeat(6,1fr),1fr);
-            grid-template-areas: "logo . . nav nav nav";
-            width: 100%;
-            height: 100%;
-            .logo{
-                grid-area: logo;
-                width: 80px;
-                height: 80px;
-                border-radius: 50%;
-                padding: 4px;
+            .nav-wraper{
+                width: 100%;
+                padding: 1rem;
             }
-        }
-        .nav{
-            display: grid;
-            grid-area: nav;
-            align-items: end;
-            font-size: 23px;
-            flex-wrap: wrap;
-            ul{
+            nav{
                 display: flex;
-                list-style: none;
-                justify-content: space-evenly;
-                padding: 10px;
-                li{
-                    text-decoration: none;
-                    color: white;
-                    img{
-                        background-color: #F2F1F0;
-                        border-radius: 30%;
-                        padding: 5px;
-                        width: 40px;
-                        height: 40px;
-                    }
-                }
-                a{
-                    text-decoration: none;
-                    color: #F2F1F0;
-                    padding: 5px;
-                    border-radius: 35%;
-                    img:hover{
-                        background-color:#E9D5DA;
-                        border-radius: 30%;
-                        padding: 5px;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                align-items: center;
+                padding: 1rem 1.5rem;
+                ul{
+                    list-style: none;
+                    display: flex;
+                    gap: 2rem;
+                    li{
+                        a{
+                            text-decoration: none;
+                            color: #F2F1F0;
+                            font-family: $fuente-texto;
+                            font-size: 18px;
+                        }
                     }
                 }
             }
-            
         }
     }
+
+nav #toggle, nav label{
+    display: none;
+}
+.logo{
+    grid-area: logo;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    padding: 4px;
 }
 body::-webkit-scrollbar{
     width: 7px;
