--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -1,29 +1,27 @@
 main{
-    background-image: url("../assets/imagenes/white-wall.jpg");
-    background-size: 100% 100%;
+    background-color: #F2F2F2;
     h1{
         font-family: $fuente-titulos;
         font-size: 60px;
         display: flex;
         justify-content: center;
         text-align: center;
-        align-self: center;
     }
     p{
         font-family: $fuente-texto;
-        text-align: center;
     }
     h2{
         font-family: $fuente-texto;
-        font-size: 20px;
+        font-size: 18px;
         text-align:justify;
         padding: 2px;
+        margin: 20px;;
     }
     h3{
         font-family: $fuente-texto;
         font-size: 27px;
-        grid-area: div1;
         text-align: center;
+        margin: 20px;
     }
     h4{
         font-family: $fuente-texto;
@@ -32,81 +30,56 @@ main{
         padding-bottom: 20px;
     }
 }
-.bg-h1{
+.banner-index{
     background-image: url('../assets/imagenes/lgbtq.jpg');
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: local;
+    background-position: center;
     height: 400px;
 }
-.grid-main{
-    width: 100%;
-    gap:15px 10px;
-    grid-template-columns: 3,1fr;
-    grid-template-rows: 7, auto;
-    grid-template-areas:
-    "rainbow rainbow"
-    ". sec1 ."
-    ". sec2 ."
-    ". sec3 ."
-    ". sec4 ."
-    ". sec5 ."
-    ". sec6 .";
-}
 .rainbow{
-    grid-area: rainbow;
     width: 100%;
     height: 20px;
     background: linear-gradient(to right,red,orange,yellow,green,blue,purple);
 }
-.sec-1{
-    @include sec-index(sec1, 5px, 4px);
-    grid-area: sec1;
-}
-.sec-2{
-    @include sec-index(sec2, 5px, 4px);
-    grid-area: sec2;
-}
-.sec-3{
-    grid-area: sec3;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    a{
-        display: flex;
-        flex-direction: row;
-        text-decoration: none;
-    }
-}
 
-section::-webkit-scrollbar{
-    width: 0.5px;
-    opacity: 0.5;
-}
-section::-webkit-scrollbar-thumb{
-    width: 0.5px;
-    background-color:rgba($color: #000000, $alpha: 0.3);
-    border-radius: 20px;
+.container{
+    row-gap: 15px;
 }
 .carrousel{
     display: flex;
     justify-content: center;
-    max-width: 700px;
-    height: 300px;
+    align-items: center;
+    margin: auto;
+    margin-bottom: 25px;
+    padding: 5px;
+    max-width: 1000px;
     width: 100%;
+    height: 300px;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    border-radius: 9px;
         img{
         width: 100%;
         object-fit: cover;
         scroll-snap-align: center;
         }
+        a{
+            display: flex;
+            flex-direction: row;
+            text-decoration: none;
+        }
 }
-
+.carrousel img:hover{
+    transform: scale(1.2);
+}
 .sec-4{
-    grid-area: sec4;
     padding: 5px;
     display: flex;
+    margin: auto;
     flex-direction: column;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     a{
@@ -117,10 +90,10 @@ section::-webkit-scrollbar-thumb{
 }
 
 .sec-5{
-    grid-area: sec5;
     padding: 5px;
     display: flex;
     flex-direction: column;
+    margin: auto;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     a{
         display: flex;
@@ -129,8 +102,8 @@ section::-webkit-scrollbar-thumb{
     }
 }
 .sec-6{
-    grid-area: sec6;
     padding: 5px;
+    margin: auto;
     display: flex;
     flex-direction: column;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -148,4 +121,13 @@ section img:hover{
     width: 100px;
     height: 230px;
     padding: 1px;
+}
+section::-webkit-scrollbar{
+    width: 0.5px;
+    opacity: 0.5;
+}
+section::-webkit-scrollbar-thumb{
+    width: 0.5px;
+    background-color:rgba($color: #000000, $alpha: 0.3);
+    border-radius: 20px;
 }
