--- a/scss/layout/_main-pages.scss
+++ b/scss/layout/_main-pages.scss
@@ -2,68 +2,104 @@ main{
     p{
         text-align: justify;
     }
-    .grid-main-p{
-        @include grid(repeat(3,auto), repeat(4,auto));
-        grid-template-areas:
-        "rainbow rainbow rainbow"
-        "1 1 1"
-        "2 . ."
-        "3 3 3";
+    h5{
+        font-family: $fuente-texto;
+        font-size: 18px;
     }
-    .titulo{
-        grid-area: 1;
-        color: white;
-        p{ 
-            align-items: center;
-            justify-content:baseline;
-            text-align: center;
-            font-size: 23px;
-            background-color: rgba($color: #000000, $alpha: 0.5);
-        }
-    }
-    .subtitulo{
-        grid-area: 2;
-    }
-    .banner{
-    background-image: url("../assets/imagenes/mujeres.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 400px;
 }
-.tapas{
-    grid-area: 3;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1 auto;
-    gap: 20px;
+.card-container{
     display: flex;
-    justify-content: center;
-    padding: 15px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 5px;
+    gap: 15px;
 }
-// .cover{
-//     width: 200px;
-//     height: 300px;
-//     margin-bottom: 10px;
-//     padding: 2px;
-//     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-// }
 .card{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 10px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 15px;
-    width: fit-content;
-    height: 500px;
-    overflow: auto;
+    gap: 5px;
+    background-color: #FEFBF3;
+    border-radius: 10%;
+}
+.card img{
+    width: 150px;
+    height: 200px;
+    object-fit: contain;
+    transition: 0.3s cubic-bezier(0.55, 0.55, 0.675, 0.19);
+}
+.card a{
+    text-decoration: none;
+    color: #000000;
+    font-family: $fuente-texto;
+}
+.banner-les{
+    background-image: url("../assets/imagenes/mujeres.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: local;
+    background-position: center;
+    height: 400px;
+}
+.banner-gay{
+    background-image: url("../assets/imagenes/beso.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: local;
+    background-position: center;
+    height: 400px;
+}
+.banner-trans{
+    background-image: url("../assets/imagenes/they3.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: local;
+    background-position: center;
+    height: 400px;
+}
+.banner-ingles{
+    background-image: url("../assets/imagenes/libros.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: local;
+    background-position: center;
+    height: 400px;
+}
+
+// STYLE DE "SINOPSIS"
+.card-sinopsis-1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     padding: 10px;
-    border: 1px solid #3E2C41;
+    margin: auto;
+    gap: 15px;
+    background-color: rgba(0,0,0,0.1);
     border-radius: 1%;
-    }
+    border: #000000;
+    width: 95%;
 }
-.card::-webkit-scrollbar{
-    width: 7px;
+.card-sinopsis-2{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    padding: 5px;
+    gap: 15px;
+    background-color: azure;
 }
-.card::-webkit-scrollbar-thumb{
-    background-color:#B2B2B2;
-    border-radius: 20px;
+.cover-sinopsis{
+    width: 120px;
+    height: 170px;
+    padding: 5px;
 }
