--- a/scss/layout/_media-320.scss
+++ b/scss/layout/_media-320.scss
@@ -1,30 +1,30 @@
-@media (max-width:320px){
-    main{
-        h1{
-            font-size: 35px;
-        }
-        h2{
-            font-size: 13px;
-        }
-    }
-    p{
-        font-size: 8.5px;
-    }
-    .cover{
-        width: 100px;
-        height: 150px;
-    }
-    section iframe{
-        width: 100px;
-        height: 150px;
-    .fot-c{
-        a{
-            font-size: 13px;
-        }
+// @media (max-width:320px){
+//     main{
+//         h1{
+//             font-size: 35px;
+//         }
+//         h2{
+//             font-size: 13px;
+//         }
+//     }
+//     p{
+//         font-size: 8.5px;
+//     }
+//     .cover{
+//         width: 100px;
+//         height: 150px;
+//     }
+//     section iframe{
+//         width: 100px;
+//         height: 150px;
+//     .fot-c{
+//         a{
+//             font-size: 13px;
+//         }
         
-    }
-    .titulo-c{
-        font-size: 30px;
-    }
-    }
-}
+//     }
+//     .titulo-c{
+//         font-size: 30px;
+//     }
+//     }
+// }
