--- a/scss/layout/_media-437.scss
+++ b/scss/layout/_media-437.scss
@@ -1,83 +1,83 @@
-@media (max-width:437px){
-    .grid{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .logo{
-        width: 50px;
-        height: 50px;
-    }
-    .nav{
-        ul{
-            display: flex;
-            flex-wrap: wrap;
-            li{
-                img{
-                    background-color: #F2F1F0;
-                    border-radius: 30%;
-                    padding: 5px;
-                    width: 30px;
-                    height: 30px;
-                }
-            }
-        }
-    }
-    h1{
-        font-size: 20px;
-    }
-    h2{
-        font-size: 14px;
-    }
-    p{
-        font-size: 10px;
-    }
-    .grid-main{
-        background-image: url("../assets/imagenes/white-wall.jpg");
-        background-size: 100% 100%;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    .cover{
-        width: 150px;
-        height: 215px
-    }
-    section iframe{
-        width: 150px;
-        height: 215px;
-    }
-    .card{
-        height: 20px;
-        padding: 10px;
-    }
-    section iframe{
-        width: 150px;
-        height: 200px;
-    }
-    .icon{
-        width: 30px;
-        height: 30px;
-    }
-    .grid-footer{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-    }
-    .fot-2 a{
-        font-family: 'Poppins', sans-serif;
-        font-size: 15px;
-    }
-    .titulo-c{
-        font-size: 30px;
-    }
-    .card-l a {
-        font-size: 9.5px;
-    }
-    .card-f {
-        height: 40px;
-        width: 120px;
-    }
-}
+// @media (max-width:437px){
+//     .grid{
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//     }
+//     .logo{
+//         width: 50px;
+//         height: 50px;
+//     }
+//     .nav{
+//         ul{
+//             display: flex;
+//             flex-wrap: wrap;
+//             li{
+//                 img{
+//                     background-color: #F2F1F0;
+//                     border-radius: 30%;
+//                     padding: 5px;
+//                     width: 30px;
+//                     height: 30px;
+//                 }
+//             }
+//         }
+//     }
+//     h1{
+//         font-size: 20px;
+//     }
+//     h2{
+//         font-size: 14px;
+//     }
+//     p{
+//         font-size: 10px;
+//     }
+//     .grid-main{
+//         // background-image: url("../assets/imagenes/white-wall.jpg");
+//         // background-size: 100% 100%;
+//         display: flex;
+//         flex-wrap: wrap;
+//         flex-direction: column;
+//         align-items: center;
+//         justify-content: center;
+//     }
+//     .cover{
+//         width: 150px;
+//         height: 215px
+//     }
+//     section iframe{
+//         width: 150px;
+//         height: 215px;
+//     }
+//     .card{
+//         height: 20px;
+//         padding: 10px;
+//     }
+//     section iframe{
+//         width: 150px;
+//         height: 200px;
+//     }
+//     .icon{
+//         width: 30px;
+//         height: 30px;
+//     }
+//     .grid-footer{
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-evenly;
+//     }
+//     .fot-2 a{
+//         font-family: 'Poppins', sans-serif;
+//         font-size: 15px;
+//     }
+//     .titulo-c{
+//         font-size: 30px;
+//     }
+//     .card-l a {
+//         font-size: 9.5px;
+//     }
+//     .card-f {
+//         height: 40px;
+//         width: 120px;
+//     }
+// }
