--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -44,7 +44,6 @@ main{
     height: 20px;
     background: linear-gradient(to right,red,orange,yellow,green,blue,purple);
 }
-
 .container{
     row-gap: 15px;
 }
@@ -53,10 +52,10 @@ main{
     justify-content: center;
     align-items: center;
     margin: auto;
-    margin-bottom: 25px;
+    margin-top: 25px;
     padding: 5px;
     max-width: 1000px;
-    width: 100%;
+    width: 95%;
     height: 300px;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
@@ -66,6 +65,7 @@ main{
         width: 100%;
         object-fit: cover;
         scroll-snap-align: center;
+        padding: 5px;
         }
         a{
             display: flex;
@@ -75,45 +75,6 @@ main{
 }
 .carrousel img:hover{
     transform: scale(1.2);
-}
-.sec-4{
-    padding: 5px;
-    display: flex;
-    margin: auto;
-    flex-direction: column;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    a{
-        display: flex;
-        flex-direction: row;
-        text-decoration: none;
-    }
-}
-
-.sec-5{
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    a{
-        display: flex;
-        flex-direction: row;
-        text-decoration: none;
-    }
-}
-.sec-6{
-    padding: 5px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    a{
-        display: flex;
-        flex-direction: row;
-        text-decoration: none;
-    }
-}
-section img:hover{
     opacity: 2;
     filter: contrast(120%);
 }
