--- a/scss/layout/_media-1024.scss
+++ b/scss/layout/_media-1024.scss
@@ -1,20 +1,6 @@
-// @media (max-width:1024px){
-//     .grid{
-//         display: flex;
-//         justify-content: space-evenly;
-//     }
-//     .nav{
-//         display: flex;
-//         flex-wrap: wrap;
-//         ul{
-//             display: flex;
-//             flex-wrap: wrap;
-//             li{
-//                 justify-content: space-evenly;
-//             }
-//         }
-//     }
-// }
 @media (max-width:1024px){
-    
+    .carrouser{
+        width: 80%;
+        height: 200px;
+    }
 }
